--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gochi+Hand&display=swap');
 * {
   box-sizing: border-box;
   padding: 0;
@@ -27,13 +29,25 @@
   
 
 }
+h1{
+  font-family: 'Gloria Hallelujah',
+  cursive;
+}
 
 h2 {
   align-items: center;
+  font-family: 'Gloria Hallelujah',
+  cursive;
 }
 
 h3 {
   left: 0;
+  font-family: 'Gloria Hallelujah',
+  cursive;
+}
+p{
+ font-family: 'Gochi Hand',
+ cursive;
 }
 
 .random-info {
@@ -49,7 +63,8 @@ input {
   width: 80%;
   height: 40px;
   padding: 10px;
-
+font-family: 'Gochi Hand',
+cursive;
 }
 
 button {
@@ -77,9 +92,9 @@ button {
   height: 200px;
   background: #443737;
   border-radius: 10px;
-  box-shadow: 2px 2px 8px rgb(238, 233, 233);
+  box-shadow: 2px 2px 8px rgb(26, 5, 5);
   padding: 10px;
-  
+    margin-top: 1.5rem;
   color: aliceblue;
   
   align-items: left;
@@ -140,6 +155,7 @@ button {
     display: flex;
     flex-wrap: wrap;
     padding: 0.5rem;
+    justify-content:space-evenly;
   
 
   }
@@ -147,6 +163,7 @@ button {
   .card-row {
     flex-wrap: wrap;
     display: flex;
+    justify-content: space-evenly;
   }
 }
 
